--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     <p>This is the first file in my new Git Repo.</p>
     <p>This line is here to show how merging works.</p>
     <p>A new line in our file!</p>
-   
-        
-    
+    <p>this is a pull test</p>        
 </body>
 
 </html>
